package com.agendalo.domain.enums;

public enum CompanyStatus {
    PENDING,
    CANCELLED,
    ACCEPTED,
    DELETED
}
